log
Fri 23 Sep 2022 11:43:14 AM UTC: 
 tests:  1|8
total_score: 0/70
03b8ea7
Fri 23 Sep 2022 12:01:11 PM UTC: 
 treemap.c | 9 +++++++++
 1 file changed, 9 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:42:6: error: ‘current’ undeclared (first use in this function)
   42 |   if(current!=NULL){
      |      ^~~~~~~
treemap.c:42:6: note: each undeclared identifier is reported only once for each function it appears in
treemap.c: In function ‘searchTreeMap’:
treemap.c:79:5: error: ‘aux’ undeclared (first use in this function)
   79 |     aux = tree->root;
      |     ^~~
treemap.c:80:22: error: expected expression before ‘)’ token
   80 |     while(aux->key < )
      |                      ^
Compilation failed
97702cb
